# ESTRUTURA_DE_DADOS-2

./: README.md
Exercicicos/ex_files/: ex  ex_3.cpp  ex_4.cpp  temperat.txt
Exercicicos/ex_files/exFiles/: CMakeLists.txt  ex  exFiles.cpp  exFiles.h  ex_1.cpp  ex_2.cpp  ex_3.cpp  ex_6.cpp  geraAleatorio.cpp  votos.txt
aulas_praticas/pratica_1/: conceitos.txt  ex  main.cpp
aulas_praticas/pratica_2/: alunos.txt  conversao.cpp  ex
