# CMakeList.txt: projeto de CMake para exFiles, incluir origem e definir
# lógica específica a um projeto aqui.
#
cmake_minimum_required (VERSION 3.8)

project ("exFiles")

# Adicione a origem ao executável deste projeto.
add_executable (exFiles "ex_6.cpp")

# TODO: Adicione testes e instale destinos, se necessário.
